<resources>
    <string name="app_name">DSaW</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_report">Report</string>
    <string name="title_user">User</string>
    <string name="taocanhbao">Tạo cảnh báo</string>
    <string name="nhap_thong_tin">Nhập ngắn gọn thông tin ở dây</string>
    <string name="noi_dung_canh_bao">Nội dung cảnh báo</string>
    <string name="cmnd_the_can_cuoc">CMND/Thẻ căn cước</string>
    <string name="cmnd_nguoi_nhan">CMND người nhận</string>
    <string name="khu_vuc_canh_bao">Khu vực cảnh báo</string>
    <string name="gui_theo_khu_vuc">Gửi theo khu vực?</string>
    <string name="gui_ngay">Gửi ngay</string>
    <string name="title_admin">Admin</string>
    <string name="see_all"> <u>Xem tất cả</u>.</string>
    <string name="channel_name"> <u>Xem tất cả</u>.</string>
    <string name="channel_description"> <u>Xem tất cả</u>.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string-array name="case_array">
        <item>Chọn đối tượng</item>
        <item>F0 - Nhiễm bệnh</item>
        <item>F1 - Nghi nhiễm</item>
        <item>F2 - Tiếp xúc F0</item>
        <item>F3 - Tiếp xúc F1</item>
    </string-array>
</resources>
