<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_48"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/news_48"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/report_48"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user_48"
        android:title="@string/title_user"/>

    <item
        android:id="@+id/navigation_admin"
        android:icon="@drawable/admin_menu_48"
        android:title="@string/title_admin"/>
</menu>