<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin_warning.AdminWarning"
    android:id="@+id/admin_warning">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/taocanhbao"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/common_google_play_services_notification_channel_name"
            app:srcCompat="@drawable/notification" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/warning_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noi_dung_canh_bao"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nhap_thong_tin"
            android:inputType="text"
            android:textColorLink="#2FD740"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warning_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/gui_den_nguoi_cu_the"
            android:paddingRight="10dp"
            android:textSize="13sp"/>

        <Switch
            android:id="@+id/stateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:checked="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cmnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option">

        <TextView
            android:id="@+id/cmndTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmnd_nguoi_nhan"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/cmndEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/cmnd_the_can_cuoc"
            android:inputType="text"
            android:textColorLink="#2FD740"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_blue_button"
            android:text="@string/gui_ngay"
            android:textColor="#FFFFFF"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>