<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_warning"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.admin_warning.AdminWarning"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/taocanhbao"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/common_google_play_services_notification_channel_name"
            app:srcCompat="@drawable/notification" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/warning_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noi_dung_canh_bao"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/contentEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nhap_thong_tin"
            android:inputType="text"
            android:textColorLink="#2FD740"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warning_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/gui_theo_khu_vuc"
            android:textSize="13sp" />

        <Switch
            android:id="@+id/stateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:outlineAmbientShadowColor="#000"
            android:shadowColor="#000"
            android:outlineSpotShadowColor="#000"
            android:theme="@style/SCBSwitch"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cmnd"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option">

        <TextView
            android:id="@+id/AreaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thành phố"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="#2FD740"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quận"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="#2FD740"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Xã/ phường"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinWard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="#2FD740"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/summit_warning_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="@string/gui_ngay"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmnd" />

</androidx.constraintlayout.widget.ConstraintLayout>