<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nguyenhongphuc98.dsaw.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/go_to_mapVisualize"
            app:destination="@id/mapVisualizeFragment"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.nguyenhongphuc98.dsaw.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.nguyenhongphuc98.dsaw.ui.surveys.UserSurveyListFragment"
        android:label="@string/title_report"
        tools:layout="@layout/user_survey_list_fragment" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.nguyenhongphuc98.dsaw.ui.user.UserFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.nguyenhongphuc98.dsaw.ui.admin.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin" >

        <action
            android:id="@+id/go_to_user_manager"
            app:destination="@id/userManagerFragment"/>

        <action
            android:id="@+id/go_to_stat"
            app:destination="@id/stat_navigation"/>

        <action
            android:id="@+id/action_navigation_admin_to_caseFragment"
            app:destination="@id/caseFragment" />

        <action
            android:id="@+id/action_navigation_admin_to_adminSurveyListFragmnet"
            app:destination="@+id/adminSurveyListFragment"/>

        <action
            android:id="@+id/go_to_warning"
            app:destination="@+id/warningFragment"/>
    </fragment>

    <fragment
        android:id="@+id/viewCaseFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.cases.ViewCaseFragment"
        android:label="fragment_user_manager"
        tools:layout="@layout/fragment_user_manager" />

    <fragment
        android:id="@+id/userManagerFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.admin.UserManagerFragment"
        android:label="UserManagerFragment" >

        <action
            android:id="@+id/go_to_user_tracking"
            app:destination="@id/routeFragment"/>
    </fragment>

    <fragment
        android:id="@+id/caseFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.cases.CaseFragment"
        android:label="fragment_case">

        <action
            android:id="@+id/go_to_view_case_fragment"
            app:destination="@id/viewCaseFragment"/>
    </fragment>

    <fragment
        android:id="@+id/adminSurveyListFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.surveys.AdminSurveyListFragment"
        android:label="Admin Survey List"
        tools:layout="@layout/fragment_admin_survey_list">

        <action
            android:id="@+id/go_to_survey_result"
            app:destination="@id/surveyResultFragment"/>

        <action
            android:id="@+id/go_to_report_result"
            app:destination="@id/reportResultFragment"/>
    </fragment>

    <include app:graph="@navigation/stat_navigation"/>

    <fragment
        android:id="@+id/surveyResultFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.surveys.SurveyResultFragment"
        android:label="SurveyResultFragment" />

    <fragment
        android:id="@+id/routeFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.route.RouteFragment"
        android:label="fragment_route"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/warningFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.admin_warning.AdminWarning"
        android:label="fragment_warning"
        tools:layout="@layout/fragment_admin_warning" />

    <fragment
        android:id="@+id/createSurveyFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.medical_report.CreateSurvey"
        android:label="fragment_create_survey"
        tools:layout="@layout/fragment_create_survey" />

    <fragment
        android:id="@+id/personalReportFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.medical_report.SubmitSurvey"
        android:label="fragment_personal_report"
        tools:layout="@layout/fragment_submit_survey" />

    <fragment
        android:id="@+id/createNewsFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.news.CreateNewsFragment"
        android:label="fragment_create_news"
        tools:layout="@layout/fragment_create_news" />

    <fragment
        android:id="@+id/reportResultFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.surveys.ReportResultFragment"
        android:label="ReportResultFragment" />

    <fragment
        android:id="@+id/mapVisualizeFragment"
        android:name="com.nguyenhongphuc98.dsaw.ui.map.MapVisualizeFragment"
        android:label="MapVisualizeFragment">

        <action
            android:id="@+id/go_to_user_tracking"
            app:destination="@id/routeFragment"/>
    </fragment>
</navigation>